--- a/Back/package.json
+++ b/Back/package.json
@@ -6,15 +6,24 @@
   "scripts": {
     "test": "mocha",
     "start": "nodemon server.js",
-    "dev" : "nodemon ./test/connexion_test.js"
+    "dev": "nodemon ./test/connexion_test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.1",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^8.1.3",
     "mongoose": "^5.10.9",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
